# mini-backend

./: Cargo.toml  LICENSE.md
.github/workflows/: check.yaml
crates/mini-backend-database/: Cargo.toml
crates/mini-backend-database/src/: lib.rs  types.rs
