[package]
name = "mini-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
clap = "4.5.36"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
