[package]
name = "mini-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
axum = { version = "0.8.3", features = ["macros"] }
clap = "4.5.36"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.4", features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "chrono",
  "uuid",
  "_sqlite",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_json = "1.0.140"

[dependencies]
